--- a/cssdemo/css_021_float.html
+++ b/cssdemo/css_021_float.html
@@ -31,7 +31,15 @@
       }
       .box3 {
         background-color: green;
+        float: right;
+      }
+      div.wrap p {
+        clear: both; /* float 해제 */
+      }
+
+      img {
         float: left;
+        margin-right: 10px;
       }
     </style>
   </head>
