--- a/cssdemo/css_033_tab.html
+++ b/cssdemo/css_033_tab.html
@@ -60,6 +60,29 @@
         color : white ;
         background-color: black;
        }
+
+       input:nth-of-type(1):checked ~ div.buttons > label:nth-of-type(1){
+        background-color: yellow;
+        color: black;
+       }
+
+       input:nth-of-type(1):checked ~ div:nth-of-type(3){
+        display: none;
+       }
+
+       input:nth-last-of-type(2):checked ~ div.buttons > label:nth-of-type(2){
+        background-color: yellow;
+        color: black;
+
+       }
+
+       input:nth-of-type(2):checked ~ div:nth-of-type(2){
+        display: none;
+       }
+
+       div#main_aside > input{
+        display: none;
+       }
     </style>
   </head>
   <body>
