--- a/javascriptdemo/js_041_checkbox.html
+++ b/javascriptdemo/js_041_checkbox.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>js_041_checkbox.html</title>
-    <script defer src="js_041_checkbox.js"></script>
+    <!-- <script defer src="js_041_checkbox.js"></script> -->
+    <script defer src="js_041_checkbox_2.js"></script>
   </head>
   <body>
     <form action="#" name="frm" method="get">
