--- a/my_homepage/index.html
+++ b/my_homepage/index.html
@@ -53,19 +53,20 @@
     <!-- <section class="ibx ban"> -->
 
     <div class="slider">
-        <input type="radio" name="slide" id="slide1" checked>
-        <input type="radio" name="slide" id="slide2">
-        <input type="radio" name="slide" id="slide3">
-        <ul id="imgholder" class="imgs">
-            <li><img src="./images/KaKaoTalk002.jpg"></li>
-            <li><img src="./images/KaKaoTalk008.jpg"></li>
-            <li><img src="./images/KaKaoTalk016.jpg"></li>
-        </ul>
-        <div class="bullets">
-            <label for="slide1">&nbsp;</label>
-            <label for="slide2">&nbsp;</label>
-            <label for="slide3">&nbsp;</label>
-        </div>
+      <input type="radio" name="slide" id="slide1" checked />
+      <input type="radio" name="slide" id="slide2" />
+      <input type="radio" name="slide" id="slide3" />
+    </div>
+    <ul id="imgholder" class="imgs">
+      <li><img src="./images/KaKaoTalk002.jpg" /></li>
+      <li><img src="./images/KaKaoTalk008.jpg" /></li>
+      <li><img src="./images/KaKaoTalk016.jpg" /></li>
+    </ul>
+    <div class="bullets">
+      <label for="slide1">&nbsp;</label>
+      <label for="slide2">&nbsp;</label>
+      <label for="slide3">&nbsp;</label>
+    </div>
     <!-- 슬라이드================================================================-->
     <!-- </div>
       <ul class="slide">
